# pocket-codex

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  README.md  README.zh-CN.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/flutter/: .gitignore  README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec-desktop.yaml  pubspec.yaml
apps/flutter/android/app/: build.gradle.kts
apps/flutter/android/app/src/main/: AndroidManifest.xml
apps/flutter/integration_test/: remote_control_test.dart  simple_test.dart
apps/flutter/ios/Runner/: Info.plist
apps/flutter/ios/Runner.xcodeproj/: project.pbxproj
apps/flutter/lib/: main.dart
apps/flutter/lib/l10n/: app_en.arb  app_zh.arb
apps/flutter/lib/src/: app_modes.dart  bridge_api.dart  bridge_api_rust.dart  context_status.dart  desktop_tray.dart  dismissed_services.dart  error_format.dart  fonts.dart  git_diff.dart  image_attachments.dart  log_manager.dart  providers.dart  router.dart  theme.dart  time_ago.dart  web_authenticator.dart
apps/flutter/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
apps/flutter/lib/src/rust/api/: bridge.dart  simple.dart
apps/flutter/lib/src/screens/: account_onboarding_screen.dart  api_service_screen.dart  app_service_screen.dart  app_session_screen.dart  local_session_view_screen.dart  local_sessions_screen.dart  log_view_screen.dart  onboarding_screen.dart  services_screen.dart  settings_screen.dart
apps/flutter/lib/src/widgets/: brand_logo.dart  links.dart  loading.dart  message_images.dart  status_dots.dart
apps/flutter/linux/: CMakeLists.txt
apps/flutter/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
apps/flutter/linux/runner/: my_application.cc
apps/flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
apps/flutter/macos/Runner/: AppDelegate.swift  DebugProfile.entitlements  Info.plist  Release.entitlements
apps/flutter/macos/Runner.xcodeproj/: project.pbxproj
apps/flutter/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/flutter/macos/Runner/Configs/: AppInfo.xcconfig
apps/flutter/rust_builder/: pubspec.yaml
apps/flutter/rust_builder/android/: build.gradle  settings.gradle
apps/flutter/rust_builder/cargokit/gradle/: plugin.gradle
apps/flutter/rust_builder/ios/: pocket_codex_bridge.podspec
apps/flutter/rust_builder/linux/: CMakeLists.txt
apps/flutter/rust_builder/macos/: pocket_codex_bridge.podspec
apps/flutter/rust_builder/windows/: CMakeLists.txt
apps/flutter/test/: context_status_test.dart  error_format_test.dart  fake_bridge_api.dart  gen_icon_test.dart  git_diff_test.dart  image_attachments_test.dart  links_test.dart  local_sessions_test.dart  log_viewer_test.dart  screens_test.dart  widget_test.dart
apps/flutter/web/: index.html  manifest.json
apps/flutter/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
apps/flutter/windows/packaging/: pocket-codex.iss
apps/flutter/windows/runner/: Runner.rc  flutter_window.cpp  main.cpp
crates/pocket-codex-account-proto/: Cargo.toml
crates/pocket-codex-account-proto/src/: bridge.rs  broker.rs  frame.rs  http.rs  key.rs  lib.rs  params.rs  pkce.rs
crates/pocket-codex-api-proxy/: Cargo.toml
crates/pocket-codex-api-proxy/src/: lib.rs
crates/pocket-codex-auth/: Cargo.toml
crates/pocket-codex-auth/src/: error.rs  github.rs  jwt.rs  lib.rs
crates/pocket-codex-backend/: Cargo.toml
crates/pocket-codex-backend/src/: api.rs  config.rs  lib.rs  main.rs  serve.rs  tls.rs
crates/pocket-codex-backend/tests/: backend_e2e.rs
crates/pocket-codex-bridge/: Cargo.toml
crates/pocket-codex-bridge/src/: e2e_manual.rs  frb_generated.rs  lib.rs
crates/pocket-codex-bridge/src/api/: bridge.rs  mod.rs  simple.rs
crates/pocket-codex-bridge/src/engine/: account.rs  app_session.rs  config.rs  discovery.rs  logging.rs  meta.rs  mod.rs  runtime.rs  serve.rs  sessions.rs
crates/pocket-codex-broker-client/: Cargo.toml
crates/pocket-codex-broker-client/examples/: broker_smoke.rs
crates/pocket-codex-broker-client/src/: conn.rs  lib.rs  register.rs  subscribe.rs
crates/pocket-codex-broker-server/: Cargo.toml
crates/pocket-codex-broker-server/src/: lib.rs  register.rs  subscribe.rs
crates/pocket-codex-broker-server/tests/: e2e_relay.rs
crates/pocket-codex-cli/: Cargo.toml
crates/pocket-codex-cli/src/: cli.rs  main.rs
crates/pocket-codex-cli/src/commands/: account.rs  api.rs  api_proxy.rs  codex.rs  connect.rs  init.rs  managed_api.rs  managed_pb.rs  mod.rs  pb.rs  relay.rs  remote_hint.rs  serve.rs  service_target.rs  services.rs  status.rs  stop.rs  transport.rs  ui.rs  version.rs  worker.rs
crates/pocket-codex-codex/: Cargo.toml
crates/pocket-codex-codex/src/: client.rs  embedded.rs  lib.rs  liveness.rs  process.rs  protocol.rs  rollout.rs  takeover.rs
crates/pocket-codex-core/: Cargo.toml
crates/pocket-codex-core/src/: config.rs  error.rs  lib.rs  paths.rs  process.rs  service.rs  state.rs
crates/pocket-codex-host-svc/: Cargo.toml  DESIGN.md
crates/pocket-codex-host-svc/src/: lib.rs  resume.rs  sessions.rs  store.rs
crates/pocket-codex-pb/: Cargo.toml
crates/pocket-codex-pb/src/: lib.rs  session.rs
crates/pocket-codex-store/: Cargo.toml
crates/pocket-codex-store/migrations/: 0001_init.sql  0002_device_flow_label.sql  0003_web_auth.sql
crates/pocket-codex-store/src/: error.rs  flows.rs  lib.rs  models.rs  tokens.rs  users.rs  web.rs
deploy/: README.md  backend.env.example  backend.toml.example  deploy.sh  pocket-codex-backend.service
docs/: cli-verification.md  usage.md  usage.zh-CN.md
docs/superpowers/plans/: 2026-05-31-relay-init.md  2026-06-01-flutter-ui-p1.md
docs/superpowers/specs/: 2026-05-31-relay-init-design.md  2026-06-01-flutter-i18n-design.md  2026-06-01-flutter-ui-design.md
scripts/: ci_affected.py
(+3 files in other folders)
