[package]
name = "pocket-codex-api-proxy"
description = "Local Responses API proxy: forwards /v1/responses (HTTP + WebSocket) to ChatGPT's Codex backend, reusing the host's codex login. Shared by the CLI worker and the in-app host."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-socks = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
rustls = { workspace = true }
tracing = { workspace = true }
