[package]
name = "pocket-codex-auth"
description = "GitHub device-flow login, session JWTs and refresh tokens for the Pocket-Codex hosted backend."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
pocket-codex-account-proto = { workspace = true }
pocket-codex-store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
