[package]
name = "pocket-codex-codex"
description = "Process management and protocol bridge for the upstream codex app-server."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
pocket-codex-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
sysinfo = { workspace = true }
nix = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }

# Optional: compile codex's app-server IN-PROCESS for the desktop self-contained
# mode — run codex's own app-server over a localhost WS (no spawned binary).
# Heavy (pulls codex-core) and pinned to codex's toolchain/deps, so it is OFF by
# default — mobile and non-embedded builds (and ordinary CI) never compile it.
# Desktop builds opt in with `--features embedded-codex`.
codex-app-server = { path = "../../deps/codex/codex-rs/app-server", optional = true }
codex-arg0 = { path = "../../deps/codex/codex-rs/arg0", optional = true }
codex-config = { path = "../../deps/codex/codex-rs/config", optional = true }
codex-utils-cli = { path = "../../deps/codex/codex-rs/utils/cli", optional = true }
codex-protocol = { path = "../../deps/codex/codex-rs/protocol", optional = true }

[features]
# Self-contained desktop: run codex in-process. External-codex (spawn) stays the
# default path and is unaffected by this feature.
embedded-codex = [
    "dep:codex-app-server",
    "dep:codex-arg0",
    "dep:codex-config",
    "dep:codex-utils-cli",
    "dep:codex-protocol",
]
