[package]
name = "pocket-codex-core"
description = "Shared types, configuration and codex app-server protocol primitives for Pocket-Codex."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
directories = { workspace = true }
sysinfo = { workspace = true }
chrono = { workspace = true }

# Unix-only: `send_sigterm` uses signal(7); Windows falls back to
# sysinfo's TerminateProcess path.
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
