[package]
name = "pocket-codex-host-svc"
description = "Host-side meta service: remote-viewable codex sessions + per-thread config, exposed through the account broker."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
pocket-codex-core = { workspace = true }
pocket-codex-codex = { workspace = true }
# `json` adds the Json extractor/response on top of the workspace axum (which is
# already linked by the bridge via pocket-codex-api-proxy, so this is no new dep
# in the mobile artifact).
axum = { workspace = true, features = ["json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
